welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: not found: value i
          setPos(j,i)
                   ^ZigZag:9: error: not found: value i
        i=i+1
        ^ZigZag:12: error: not found: value i
          setPos(k,i)
                   ^ZigZag:16: error: not found: value i
        i=i+1
        ^